# Pixeles

Fase 1/: Makefile  build  main.cpp
Fase 1/Linux/: fase1.cpp
Fase 1/Windows/: Fase1.cpp  Fase1.old  Fase1.slnx  Fase1.vcxproj.filters
Fase 1/Windows/Fase1/: Fase1.cpp  Fase1.vcxproj
Fase 1/Windows/Fase1/Librerias/GLAD/src/: glad.c
Fase 1/Windows/Fase1/x64/Debug/: Fase1.exe.recipe  Fase1.ilk  vc145.idb
Fase 1/Windows/Fase1/x64/Debug/Fase1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Fase1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Fase 1/Windows/x64/Debug/: Fase1.ilk  vc145.idb
Fase 1/Windows/x64/Debug/Fase1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.secondary.1.tlog
Fase 1/inc/glad/: glad.h
Fase 2/Linux/: Makefile  fase2.cpp
Fase 2/Linux/Inazuma/: Makefile
Fase 2/Linux/Inazuma/shaders/: shader.fs  shader.vs
Fase 2/Linux/Inazuma/src/: main.cpp
Fase 2/Linux/shaders/: fragment_shader_basico.fs  shader.cpp  shader.hpp
Fase 2/Windows/: Fase2.slnx
Fase 2/Windows/Fase2/: Fase2.cpp  Fase2.vcxproj  Fase2.vcxproj.filters
Fase 2/Windows/Fase2/x64/Debug/: Fase2.exe.recipe  Fase2.ilk  vc145.idb
Fase 2/Windows/Fase2/x64/Debug/Fase2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Fase2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Fase 3/Linux/: Fase3.hpp
Fase 3/Linux/ResourceManager/: ResourceManager.cpp
Fase 3/Linux/SceneTree/: SceneTree.hpp
Fase 3/Linux/Shaders/: Shader.hpp
Fase 3/Windows/: Fase3.slnx
Fase 3/Windows/Fase3/: Fase3.cpp  Fase3.h  Fase3.hpp  Fase3.vcxproj  Fase3.vcxproj.filters
Fase 3/Windows/Fase3/ResourceManager/: R_AllResources.hpp  R_Model.hpp  R_Resource.hpp  R_Shader.hpp  ResourceManager.cpp  ResourceManager.hpp  TAllResources.hpp  TR_Mesh.hpp  TR_Model.hpp  TR_Shader.hpp  TResource.hpp  TResourceManager.hpp
Fase 3/Windows/Fase3/SceneTree/: E_Camera.hpp  E_Model.hpp  SceneTree.cpp  TCamera.hpp  TEntities.hpp  TEntity.hpp  TModel.hpp  sceneTree.hpp
Fase 3/Windows/Fase3/Shaders/: shader.cpp  shader.hpp  vertex_shader_basico.vs
Fase 3/Windows/Fase3/x64/Debug/: Fase2.exe.recipe  Fase3.exe.recipe  Fase3.ilk  fase3.new.obj.enc  vc145.idb
Fase 3/Windows/Fase3/x64/Debug/Fase2.tlog/: CL.read.1.tlog  Cl.items.tlog  link.read.1.tlog  link.secondary.1.tlog
Fase 3/Windows/Fase3/x64/Debug/Fase3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Fase3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Fase 4/Linux/ResourceManager/: R_Mesh.hpp
Fase 4/Linux/SceneTree/: E_AllEntities.hpp  E_Model.hpp
Fase 4/Linux/Shaders/: Shader.cpp
Fase 4/Linux/libs/: glad.c
Fase 4/Windows/: Fase4.slnx
Fase 4/Windows/Fase4/: Fase4.cpp  Fase4.vcxproj  Fase4.vcxproj.filters
Fase 4/Windows/Fase4/ResourceManager/: R_Mesh.hpp  R_Model.hpp  R_Shader.hpp  ResourceManager.cpp  ResourceManager.hpp
Fase 4/Windows/Fase4/Resources/: Créditos.txt
Fase 4/Windows/Fase4/SceneTree/: E_Light.hpp  E_Model.hpp
Fase 4/Windows/Fase4/Shaders/: FragmentShader.fs  Shader.hpp  VertexShader.vs
Fase 4/Windows/Fase4/x64/Debug/: Fase4.exe.recipe  fase4.new.obj.enc  vc145.idb
Fase 5/Linux/Shaders/: fragment_shader_basico.fs
Fase 5/Windows/: Fase5.slnx
Fase 5/Windows/Fase5/: Assimo.txt  Fase5.cpp  Fase5.hpp  Fase5.vcxproj  Fase5.vcxproj.filters
Fase 5/Windows/Fase5/Librerias/Assimp/: assimp-vc145-mtd.lib
Fase 5/Windows/Fase5/ResourceManager/: R_AllResources.hpp  R_Model.hpp  ResourceManager.cpp  ResourceManager.hpp
Fase 5/Windows/Fase5/Resources/: Personaje.fbx
Fase 5/Windows/Fase5/SceneTree/: E_AllEntities.hpp  E_Entity.hpp  E_Light.hpp  E_Model.hpp  E_Skybox.hpp  SceneTree.cpp  SceneTree.hpp
Fase 5/Windows/Fase5/Shaders/: FragmentShader.fs  Shader.hpp  SkyboxFragmentShader.fs  SkyboxVertexShader.vs
Fase 5/Windows/Fase5/x64/Debug/: Fase5.exe.recipe  vc145.idb
Fase 6/Linux/: Makefile  build
Fase 6/Linux/ResourceManager/: R_Model.hpp
Fase 6/Linux/SceneTree/: E_Camera.hpp
Fase 6/Linux/Shaders/: vertex_shader_basico.vs
Fase 6/Windows/: Fase6.slnx
Fase 6/Windows/Fase6/: Fase6.cpp  Fase6.vcxproj  Fase6.vcxproj.filters  PixelesEngine.lib
Fase 6/Windows/Fase6/Engine/: CMakeLists.txt
Fase 6/Windows/Fase6/Engine/Core/: CMakeLists.txt
Fase 6/Windows/Fase6/Engine/Core/Include/: E_AllEntities.hpp  E_Entity.hpp  E_Light.hpp  E_Model.hpp  E_Skybox.hpp  Pixeles.hpp  PixelesTypes.hpp  R_AllResources.hpp  R_Mesh.hpp  R_Model.hpp  R_Shader.hpp  ResourceManager.hpp  SceneTree.hpp  Shader.hpp  ShadersDefault.hpp
Fase 6/Windows/Fase6/Engine/Core/Include/Pixeles/: E_AllEntities.hpp  E_Camera.hpp  E_Entity.hpp  E_Model.hpp  E_Skybox.hpp  Pixeles.hpp  PixelesTypes.hpp  R_AllResources.hpp  R_Mesh.hpp  R_Model.hpp  R_Resource.hpp  R_Shader.hpp  ResourceManager.hpp  SceneTree.hpp
Fase 6/Windows/Fase6/Engine/Core/Src/: Pixeles.cpp  ResourceManager.cpp  SceneTree.cpp  Shader.cpp
Fase 6/Windows/Fase6/Engine/Shaders/: DefaultVertexShader.vs  SkyboxVertexShader.vs
Fase 6/Windows/Fase6/Resources/: Créditos.txt
Fase 6/Windows/Fase6/x64/Debug/: vc145.idb
Fase 6/Windows/Fase6/x64/Release/: Fase6.exe.recipe  Fase6.iobj  Fase6.ipdb
Inazuma/Linux/: Inazuma.cpp  Inazuma.hpp  InazumaTypes.hpp  defaultFontData.hpp  makefile
Inazuma/Linux/Animator/: animation.hpp  animator.hpp  bone.hpp
Inazuma/Linux/ResourceManager/: TAllResources.hpp  TR_Mesh.hpp  TR_Model.hpp  TResourceManager.hpp  assimpConverter.hpp
Inazuma/Linux/SceneTree/: T2DElement.hpp  TAllEntities.hpp  TAnimationModel.hpp  TBillboard.hpp  TCamera.hpp  TEntity.hpp  TLight.hpp  TModel.hpp  TRay.hpp  TSkybox.hpp  sceneTree.hpp
Inazuma/Linux/Shaders/: basicSaders.hpp  shader.hpp
(+32 files in other folders)
